<resources>
    <string name="app_name">FundamentalSubmission</string>
    <string name="title">Judul</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="write_your_review_here">Write your review here..</string>
    <string name="send">Submit</string>
    <string name="searchbar_hint">Masukkan kata</string>
    <string name="this_activity">ini adalah tv\n</string>
    <string name="user_name">ini adalah nama user github</string>
    <string name="tab_foll">ini adalah tab followin follower\n</string>
    <string name="follower_text">follower\n</string>
    <string name="following_text">following\n</string>
    <string name="nama_user">nama_user</string>
    <string name="tab_follower">follower</string>
    <string name="tab_following">following</string>
    <string name="followers">Followers: %d</string>
    <string name="following">Following: %d</string>
    <string name="darkMode">Dark Mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode  </string>
    <string name="search_hint">Cari User</string>
    <string name="no_favorite_user_added">No Favorite User Added</string>


</resources>